--- a/Lab1/makefile
+++ b/Lab1/makefile
@@ -6,11 +6,7 @@ SOURCE = Semaphore.cpp signal.cpp
 HEADER = Semaphore.h
 OUT = signal.out
 CC = g++
-FLAGS = -g -c -Wall
 LFLAGS =
 
 all: $(OBJS)
-	$(CC) -g $(OBJS) -o $(OUT) $(LFLAGS)
-	make clean
-clean:
-	rm -f $(OBJS)
+	$(CC) $(OBJS) -o $(OUT) $(LFLAGS)
