--- a/Lab2/makefile
+++ b/Lab2/makefile
@@ -6,11 +6,10 @@ SOURCE = Semaphore.cpp main.cpp
 HEADER = Semaphore.h 
 OUT = main.out
 CC = g++
-FLAGS = -g -c -Wall
 LFLAGS =
 
 all: $(OBJS)
-	$(CC) -g $(OBJS) -o $(OUT) $(LFLAGS)
+	$(CC) $(OBJS) -o $(OUT) $(LFLAGS)
 	make clean
 clean:
 	rm -f $(OBJS)
