properly commented all the files in lab 1-4

--- a/Lab1/makefile
+++ b/Lab1/makefile
@@ -1,5 +1,7 @@
 #Name: Davids Jalisevs
+#Date: 30/03/2023
 #License: GNU General Public License 3.0
+
 
 OBJS = Semaphore.o signal.o
 SOURCE = Semaphore.cpp signal.cpp
