--- a/Lab4/makefile
+++ b/Lab4/makefile
@@ -1,5 +1,7 @@
 #Name: Davids Jalisevs
+#Date: 30/03/2023
 #License: GNU General Public License 3.0
+
 
 OBJS = Semaphore.o main.o Barrier.o
 SOURCE = Semaphore.cpp main.cpp Barrier.cpp
