added lab 5. more comments

--- a/Lab1/makefile
+++ b/Lab1/makefile
@@ -3,6 +3,7 @@
 #License: GNU General Public License 3.0
 
 
+#Define object files, source, header,output, compiler and other flags
 OBJS = Semaphore.o signal.o
 SOURCE = Semaphore.cpp signal.cpp
 HEADER = Semaphore.h
@@ -10,5 +11,7 @@ OUT = signal.out
 CC = g++
 LFLAGS =
 
+
+#build all object files and link them into the output
 all: $(OBJS)
 	$(CC) $(OBJS) -o $(OUT) $(LFLAGS)
