--- a/Lab2/makefile
+++ b/Lab2/makefile
@@ -2,16 +2,19 @@
 #Date: 30/03/2023
 #License: GNU General Public License 3.0
 
-
+#Define object files, source, header,output, compiler and other flags
 OBJS = Semaphore.o main.o 
 SOURCE = Semaphore.cpp main.cpp 
 HEADER = Semaphore.h 
 OUT = main.out
 CC = g++
 LFLAGS =
-
+#build all object files and link them into the output
 all: $(OBJS)
 	$(CC) $(OBJS) -o $(OUT) $(LFLAGS)
+#Clean up objects aftrer linking this whole thingggggggggggggggggggggggg
 	make clean
 clean:
 	rm -f $(OBJS)
+	
+#THIS THING ABOVE CLEANS UP OBJECT FILES
