--- a/Lab4/makefile
+++ b/Lab4/makefile
@@ -2,7 +2,7 @@
 #Date: 30/03/2023
 #License: GNU General Public License 3.0
 
-
+#Define object files, source, header,output, compiler and other flags
 OBJS = Semaphore.o main.o Barrier.o
 SOURCE = Semaphore.cpp main.cpp Barrier.cpp
 HEADER = Semaphore.h Barrier.h
@@ -10,7 +10,7 @@ OUT = main.out
 CC = g++
 LFLAGS =
 
-
+#build all object files and link them into the output, -g is for debug, wall is for warnings
 all: $(OBJS)
 	$(CC) -g $(OBJS) -Wall -o $(OUT) $(LFLAGS)
 	make clean
@@ -18,7 +18,7 @@ all: $(OBJS)
 clean:
 	rm -f $(OBJS)
 
-
+#all cleans are cleaning there 
 
 #-g is enabling debbuging mode
 #-c generates object code for seperae files
